extend api with user specific info and fow
